--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,9 @@
 homepage: "https://atrilyx.com/"
 documentation: "https://docs.atrilyx.com/akb/gtm-template"
 versions:
+# Latest version
+  - sha: 9a072173c9ddebf13018ac22fafc851b4ae60056
+    changeNotes: Additional Options.
+# Older versions
   - sha: a9acdb1a61a0d02c9e34a60fc28b2aa388750446
     changeNotes: Initial release.
